[package]
name = "todo"
version = "0.1.0"
authors = ["b-fuze <b-fuze.root@live.com>"]
edition = "2018"

[dependencies]
gtk = { git = "https://github.com/gtk-rs/gtk.git", features = ["v3_22"] }
gdk = { git = "https://github.com/gtk-rs/gdk.git" }
gdk-sys = { git = "https://github.com/gtk-rs/sys.git" }

